<resources>
    <string name="app_name">ToDo App</string>
    <string name="listTitle">Мои дела</string>
    <string name="priorityTitle">Важность</string>
    <string name="newTaskBtn">Новое</string>
    <string name="doneTaskCounter">Выполнено</string>
    <string name="close">Закрыть</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="taskTextHint">Что надо сделать…</string>
    <string name="priorityHigh">Важная</string>
    <string name="priorityNormal">Обычная</string>
    <string name="priorityLow">Не важная</string>
    <string name="taskDeadline">Сделать до</string>
    <string name="closeBtnDescription">Закрыть</string>
    <string name="deleteBtnDescription">Удалить задачу</string>
    <string name="floatingAddActionButtonDescription">Добавить задачу</string>
    <string name="calendarOk">Ок</string>
    <string name="calendarCancel">Отмена</string>
    <string name="retry">Повторить</string>
    <string name="saveError">Не удалось сохранить</string>
    <string name="deleteError">Не удалось удалить</string>
    <string name="addError">Не удалось добавить</string>
    <string name="editError">Не удалось изменить</string>
    <string name="themeModeDark">Тёмная тема</string>
    <string name="themeModeLight">Светлая тема</string>
    <string name="themeModeSystem">Как в системе</string>
    <string name="hideDoneTaskBtnDescription">Скрыть выполненые задачи</string>
    <string name="changeThemeBtnDescription">Изменить тему приложения</string>
    <string name="aboutAppBtnDescription">Информация о приложении</string>
    <string name="taskDoneDescription">Задача выполнена</string>
    <string name="taskUndoneDescription">Задача не выполнена</string>
    <string name="undoneTaskDeadlineDescription">Сделать до</string>
    <string name="todoItemDoubleClickActionDescription">Изменить задачу</string>
    <string name="doneTaskCheckboxClickDescription">Отменить выполнение задачи</string>
    <string name="undoneTaskCheckboxClickDescription">Выполнить задачу</string>
    <string name="noDeadlineTaskDescription">Нет дедлайна</string>
    <string name="withDeadlineTaskDescription">Выполнить задачу до</string>
    <string name="changeDeadlineActionDescription">Изменить дедлайн</string>
    <string name="hasDeadlineClickDescription">Убрать дедлайн</string>
    <string name="hasNotDeadlineClickDescription">Добавить дедлайн</string>
    <string name="changePriorityActionDescription">Изменить важность задачи</string>
    <string name="addTaskActionDescription">Добавить задачу</string>
    <string name="buttonDisabledDescription">Кнопка отключена</string>
    <string name="todoItemPriorityDescription">Важность задачи</string>
</resources>