<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backPrimary"
    tools:context=".presentation.fragments.TodoItemEditFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/backPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close"
            android:src="@drawable/baseline_close_24"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="4dp" />

        <TextView
            android:id="@+id/saveTaskBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="16dp"
            android:text="@string/save"
            android:textAppearance="?attr/textAppearanceButton"
            android:textColor="?attr/colorBlue" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/taskText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/taskTextHint"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/priorityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/priorityTitle"
                android:textColor="?attr/labelPrimary"
                app:layout_constraintStart_toStartOf="@+id/taskText"
                app:layout_constraintTop_toBottomOf="@+id/taskText" />

            <Spinner
                android:id="@+id/taskPrioritySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/taskText"
                app:layout_constraintTop_toBottomOf="@+id/priorityTitle" />

            <View
                android:id="@+id/afterTaskPrioritySpinnerDivider"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/divider"
                app:layout_constraintEnd_toEndOf="@+id/taskText"
                app:layout_constraintStart_toStartOf="@+id/taskText"
                app:layout_constraintTop_toBottomOf="@+id/taskPrioritySpinner" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/deadlineLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/taskText"
                app:layout_constraintStart_toStartOf="@+id/taskPrioritySpinner"
                app:layout_constraintTop_toBottomOf="@+id/afterTaskPrioritySpinnerDivider">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/taskDeadline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/hasDeadlineSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView" />

                <TextView
                    android:id="@+id/deadlineDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="11.11.1111"
                    android:textColor="?attr/colorBlue"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/afterDeadlineLayoutDivider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deadlineLayout" />

            <LinearLayout
                android:id="@+id/deleteLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/deadlineLayout"
                app:layout_constraintTop_toBottomOf="@+id/afterDeadlineLayoutDivider">

                <ImageView
                    android:id="@+id/deleteTaskIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/baseline_delete_24" />

                <TextView
                    android:id="@+id/delete_task_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:textColor="?attr/colorRed" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>